# native-hook

./: .gitignore  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/feature/hook/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hook_simple.c  hook_simple.h  logger.h  native_hook.c  native_hook.h  native_write.c  native_write.h
app/src/main/java/com/feature/hook/: MainActivity.java  NativeHook.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/feature/hook/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
